--- a/App01_ControleXF/App01_ControleXF.Android/App01_ControleXF.Android.csproj
+++ b/App01_ControleXF/App01_ControleXF.Android/App01_ControleXF.Android.csproj
@@ -91,13 +91,15 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\App01_ControleXF\App01_ControleXF.csproj">
       <Project>{04B4281A-4DC2-4244-AB5B-C383463E1329}</Project>
       <Name>App01_ControleXF</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\buttonrightchevron.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
