casa - slider e searchBar

--- a/App01_ControleXF/App01_ControleXF/App01_ControleXF.csproj
+++ b/App01_ControleXF/App01_ControleXF/App01_ControleXF.csproj
@@ -38,6 +38,12 @@
     <EmbeddedResource Update="Controles\ProgressBarPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Controles\SearchBarPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Controles\SliderStepperPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Controles\TimePickerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
