--- a/App01_ControleXF/App01_ControleXF/App01_ControleXF.csproj
+++ b/App01_ControleXF/App01_ControleXF/App01_ControleXF.csproj
@@ -44,6 +44,9 @@
     <EmbeddedResource Update="Controles\SliderStepperPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Controles\SwitchPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Controles\TimePickerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
