--- a/App01_ControleXF/App01_ControleXF/App01_ControleXF.csproj
+++ b/App01_ControleXF/App01_ControleXF/App01_ControleXF.csproj
@@ -29,6 +29,9 @@
     <EmbeddedResource Update="Controles\EntryEditorPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Controles\ImagePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Controles\LabelPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
