swiss: aulas - tableview e webview

--- a/App01_ControleXF/App01_ControleXF/App01_ControleXF.csproj
+++ b/App01_ControleXF/App01_ControleXF/App01_ControleXF.csproj
@@ -53,7 +53,13 @@
     <EmbeddedResource Update="Controles\SwitchPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Controles\TableViewPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Controles\TimePickerPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Controles\WebViewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Master\Master.xaml">
